added functionality for sqlite db
